Fixed position and overflow on tiny screens

--- a/css/main.css
+++ b/css/main.css
@@ -49,12 +49,13 @@ h2 {
 
 .input-group {
 	margin-bottom: 15px;
-	width: 300px;
+	max-width: 300px;
 	margin: 0 auto 10px;
 }
 
 .input-group > input {
 	display: inline-block;
+	width: 65%;
 }
 
 .input-group > label {
@@ -82,6 +83,8 @@ h2 {
 ul {
 	list-style: none;
 	margin: 25px 0 0 0;
+	padding: 0;
+	text-align: center;
 }
 
 li {
